[tool.poetry]
name = "GenshinWishHistory"
version = "1.0.0"
description = ""
authors = ["TRDC <vudi600@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
